<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".views.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="5">

        <TextView
            android:id="@+id/viewUserConnected"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="start|center_vertical"
            android:text="@string/connected_user"
            app:drawableStartCompat="@drawable/icono_user_conect" />

        <ImageButton
            android:id="@+id/viewLogOut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:gravity="end|center_vertical"
            android:onClick="logout"
            android:padding="12dp"
            android:text="@string/log_out"
            app:srcCompat="@drawable/icono_logout"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:id="@+id/viewNameApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="12pt"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCustomers"
                style="@style/btnMenu"
                android:layout_marginTop="30dp"
                android:text="@string/btn_customer" />

            <Button
                android:id="@+id/btnVehicles"
                style="@style/btnMenu"
                android:layout_marginTop="20dp"
                android:text="@string/btn_vehicles" />

            <Button
                android:id="@+id/btnSupplies"
                style="@style/btnMenu"
                android:layout_marginTop="20dp"
                android:text="@string/btn_supplies" />

            <Button
                android:id="@+id/btnSales"
                style="@style/btnMenu"
                android:layout_marginTop="20dp"
                android:text="@string/btn_sales" />

            <Button
                android:id="@+id/btnListUsers"
                style="@style/btnMenu"
                android:layout_marginTop="20dp"
                android:text="@string/btn_list_users" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>