<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvFechaVentaComplet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_date_sale" />

    <TextView
        android:id="@+id/tvNameClientComplet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_customer_sale"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvNameSellerComplet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_seller_sale" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvProductCodeHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/view_product_code"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvProductNameHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/view_product_name"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvQuantityHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/view_quatity_unit"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTotalHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/view_total_product"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/productListView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="0dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"
        android:nestedScrollingEnabled="true"
        android:padding="8dp" />

    <TextView
        android:id="@+id/tvTotalSale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/view_total_product"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>