<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvProductNameSale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/view_product_name" />

    <TextView
        android:id="@+id/tvUnitPriceSale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:text="@string/view_price_unit"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tvQuantitySale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/view_quatity_unit"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tvTotalSale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:text="@string/view_total_product"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />
</LinearLayout>