<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".views.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/viewSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/view_sign_in"
            android:textSize="12pt"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtUser"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/txt_id_card_user"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:helperText="Required"
            app:startIconDrawable="@drawable/icono_user">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/txt_password_user"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/icono_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            style="@style/btnApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login" />

        <Button
            android:id="@+id/btnSignUp"
            style="@style/btnApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_up" />

    </LinearLayout>

</LinearLayout>